internalproxy/templates/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.internal.prd.durp.info`)
    middlewares:
    - name: whitelist
      namespace: traefik  
    kind: Rule
    services:
    - name: argocd-server
      port: 443
      scheme: https
  tls:
    secretName: argocd-tls  

---

kind: Service
apiVersion: v1
metadata:
  name: argocd-server
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
