internalproxy/templates/guac.yaml
kind: Service
apiVersion: v1
metadata:
  name: guac-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: guac.durp.info
spec:
  type: ExternalName
  externalName: durp.info

---

apiVersion: v1
kind: Service
metadata:
  name: guac
spec:
  ports:
  - name: app
    port: 8082
    protocol: TCP
    targetPort: 8082
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: guac
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 8082
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: guac-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`guac.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: guac
      port: 8082
  tls:
    secretName: guac-tls
