internalproxy/templates/heimdall.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
spec:
  ports:
  - name: app
    port: 8443
    protocol: TCP
    targetPort: 8443
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: heimdall
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 8443
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`heimdall.internal.durp.info`) && PathPrefix(`/`)
    middlewares:
    - name: whitelist
      namespace: traefik
    - name: authentik-proxy-provider
      namespace: traefik  
    kind: Rule
    services:
    - name: heimdall
      port: 8200
  - match: Host(`heimdall.internal.durp.info`) && PathPrefix(`/outpost.goauthentik.io`)
    kind: Rule
    services:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
      port: 9000
  tls:
    secretName: heimdall-tls
