internalproxy/templates/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - name: app
    port: 8096
    protocol: TCP
    targetPort: 8096
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 8096
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.durp.info`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
      scheme: https
  tls:
    secretName: jellyfin-tls  

---

kind: Service
apiVersion: v1
metadata:
  name: jellyfin-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jellyfin.durp.info
spec:
  type: ExternalName
  externalName: home.durp.info
