internalproxy/templates/kasm-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm
spec:
  ports:
  - name: app
    port: 443
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kasm
subsets:
- addresses:
  - ip: 192.168.20.100
  ports:
  - name: app
    port: 443
    protocol: TCP
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kasm-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kasm.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kasm
      port: 443
  tls:
    secretName: kasm-tls

---

kind: Service
apiVersion: v1
metadata:
  name: kasm-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kasm.durp.info
spec:
  type: ExternalName
  externalName: durp.info
