internalproxy/templates/minio-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
  - name: app
    port: 9769
    protocol: TCP
    targetPort: 9769
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 9769
    protocol: TCP

#---    
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minio-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production 
#    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
#spec:
#  rules:
#  - host: minio.internal.durp.info
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: minio
#            port: 
#              number: 9769         
#  tls:
#    - hosts: 
#      - minio.internal.durp.info
#      secretName: minio-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`minio.internal.durp.info`)
    middlewares:
    - name: whitelist
      namespace: traefik  
    kind: Rule
    services:
    - name: minio
      port: 9769
      scheme: https
  tls:
    secretName: minio-tls
