internalproxy/templates/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: app
      port: 9769
      protocol: TCP
      targetPort: 9769
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: 192.168.20.253
    ports:
      - name: app
        port: 9769
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: minio
          port: 9769
          scheme: http
  tls:
    secretName: minio-tls
