internalproxy/templates/octopus.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopus
spec:
  ports:
    - name: app
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: octopus
subsets:
  - addresses:
      - ip: 192.168.20.105
    ports:
      - name: app
        port: 443
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: octopus-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`octopus.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: octopus
          port: 443
          scheme: https
  tls:
    secretName: octopus-tls
