internalproxy/templates/overlord-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: overlord
spec:
  ports:
  - name: app
    port: 8006
    protocol: TCP
    targetPort: 8006
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: overlord
subsets:
- addresses:
  - ip: 192.168.21.254
  ports:
  - name: app
    port: 8006
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overlord-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production 
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: overlord.internal.durp.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overlord
            port: 
              number: 8006         
  tls:
    - hosts: 
      - overlord.internal.durp.info
      secretName: overlord-tls
