internalproxy/templates/plex-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - name: app
    port: 32400
    protocol: TCP
    targetPort: 32400
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 32400
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`plex.durp.info`)
    kind: Rule
    services:
    - name: plex
      port: 32400
      scheme: https
  tls:
    secretName: plex-tls
