internalproxy/templates/plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: app
      port: 32400
      protocol: TCP
      targetPort: 32400
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
  - addresses:
      - ip: 192.168.20.253
    ports:
      - name: app
        port: 32400
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: plex
          port: 32400
          scheme: https
  tls:
    secretName: plex-tls

---

kind: Service
apiVersion: v1
metadata:
  name: plex-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.durp.info
spec:
  type: ExternalName
  externalName: durp.info
