internalproxy/templates/registry-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-internal
spec:
  ports:
  - name: app
    port: 5000
    protocol: TCP
    targetPort: 5000
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: registry-internal
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 5000
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-internal-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`registry.internal.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: registry-internal
      port: 5000
  tls:
    secretName: registry-tls
