internalproxy/templates/semaphore.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
spec:
  ports:
    - name: app
      port: 3001
      protocol: TCP
      targetPort: 3001
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: semaphore
subsets:
  - addresses:
      - ip: 192.168.20.253
    ports:
      - name: app
        port: 3001
        protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: semaphore-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`semaphore.internal.durp.info`) && PathPrefix(`/`)
      middlewares:
        - name: whitelist
          namespace: traefik
      kind: Rule
      services:
        - name: semaphore
          port: 3001
          scheme: http
  tls:
    secretName: semaphore-tls
