internalproxy/templates/speedtest.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  ports:
  - name: app
    port: 6580
    protocol: TCP
    targetPort: 6580
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: speedtest
subsets:
- addresses:
  - ip: 192.168.20.253
  ports:
  - name: app
    port: 6580
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`speedtest.durp.info`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: authentik-proxy-provider
      namespace: traefik 
    services:
    - name: speedtest
      port: 8081
  tls:
    secretName: speedtest-tls

---

kind: Service
apiVersion: v1
metadata:
  name: speedtest-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: speedtest.durp.info
spec:
  type: ExternalName
  externalName: durp.info
