internalproxy/templates/switch01.yaml
apiVersion: v1
kind: Service
metadata:
  name: switch01
spec:
  ports:
  - name: app
    port: 443
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: switch01
subsets:
- addresses:
  - ip: 192.168.30.3
  ports:
  - name: app
    port: 443
    protocol: TCP

#---    
#
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: switch01-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production 
#    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#spec:
#  rules:
#  - host: switch01.internal.durp.info
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: switch01
#            port: 
#              number: 443         
#  tls:
#    - hosts: 
#      - switch01.internal.durp.info
#      secretName: switch01-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: switch01-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`switch01.internal.durp.info`)
    middlewares:
    - name: whitelist
      namespace: traefik  
    kind: Rule
    services:
    - name: switch01
      port: 443
      scheme: https
  tls:
    secretName: switch01-tls
