internalproxy/templates/wazuh.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh
spec:
  ports:
  - name: app
    port: 443
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP

---

apiVersion: v1
kind: Endpoints
metadata:
  name: wazuh
subsets:
- addresses:
  - ip: 192.168.20.102
  ports:
  - name: app
    port: 443
    protocol: TCP

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wazuh-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`wazuh.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: wazuh
      port: 443
  tls:
    secretName: wazuh-tls

---

kind: Service
apiVersion: v1
metadata:
  name: registry-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wazuh.durp.info
spec:
  type: ExternalName
  externalName: durp.info
